[project]
name = "reflection-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.2",
    "tavily>=1.1.0",
]
